--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="tab_background">#292927</color>
+    <color name="tab_indicator">#e22d3a</color>
+    <color name="colorText">#ffffff</color>
+
 </resources>
